--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -92,6 +92,15 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/output"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Output"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
+
     </LinearLayout>
 
 
