Add a Slate Fragment to add slate there and in the HomeFragment showing article about different language

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,7 +4,7 @@
       android:title="@string/home"
       android:icon="@drawable/ic_home"/>
 
-    <item android:id="@+id/profileFragment"
-        android:title="@string/profile"
-        android:icon="@drawable/ic_profile"/>
+    <item android:id="@+id/slateFragment"
+        android:title="Slate"
+        android:icon="@drawable/ic_slate"/>
 </menu>
