--- a/app/src/main/res/layout/alphabet_toolbar.xml
+++ b/app/src/main/res/layout/alphabet_toolbar.xml
@@ -9,10 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="@color/black"
+        android:background="@color/blue"
         android:minHeight="?attr/actionBarSize"
         app:navigationContentDescription="@string/abc_action_bar_up_description"
-        app:title="@string/home"
+        app:title="Alphabet"
         app:titleTextColor="@color/white"/>
 
 </merge>
