--- a/app/src/main/res/layout/slate_toolbar.xml
+++ b/app/src/main/res/layout/slate_toolbar.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="@color/black"
+        android:background="@color/blue"
         android:minHeight="?attr/actionBarSize"
         app:navigationContentDescription="@string/abc_action_bar_up_description"
         app:title="Slate"
