--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#3F51B5</color>
+    <color name="red">#CF2C2C</color>
+    <color name="green">#03D557</color>
 </resources>
