--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue">#3F51B5</color>
     <color name="red">#CF2C2C</color>
     <color name="green">#03D557</color>
+    <color name="gray">#ECECEC</color>
 </resources>
