--- a/app/src/main/res/navigation/bottom_nav.xml
+++ b/app/src/main/res/navigation/bottom_nav.xml
@@ -16,4 +16,9 @@
         android:name="com.compose.android.dev.edu.iiitnr.gondi.ui.fragment.AlphabetFragment"
         android:label="fragment_alphabet"
         tools:layout="@layout/fragment_alphabet" />
+    <fragment
+        android:id="@+id/dictionaryFragment"
+        android:name="com.compose.android.dev.edu.iiitnr.gondi.DictionaryFragment"
+        android:label="fragment_dictionary"
+        tools:layout="@layout/fragment_dictionary" />
 </navigation>
