--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toTopOf="@id/bottomView"
         app:layout_constraintEnd_toEndOf="@id/bottomView"
         app:layout_constraintStart_toStartOf="@id/bottomView"
+        android:layout_marginBottom="50dp"
         app:navGraph="@navigation/bottom_nav"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
